# hdl-codegraph

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.rocky  MIGRATION_INSTRUCTIONS.md  Makefile  OFFLINE_INSTALL.md  README.md  install-rust-offline.sh  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
ci/: hdl-graph.rb  release.sh
crates/hdl-graph-build/: Cargo.toml
crates/hdl-graph-build/src/: lib.rs
crates/hdl-graph-cli/: Cargo.toml
crates/hdl-graph-cli/src/: main.rs
crates/hdl-graph-core/: Cargo.toml
crates/hdl-graph-core/src/: config.rs  edge.rs  error.rs  graph.rs  helpers.rs  lib.rs  node.rs  scope.rs  span.rs  symbol.rs
crates/hdl-graph-grammar/: Cargo.toml  build.rs
crates/hdl-graph-lsp/: Cargo.toml
crates/hdl-graph-lsp/src/: backend.rs  lib.rs
crates/hdl-graph-mcp/: Cargo.toml
crates/hdl-graph-mcp/src/: main.rs  server.rs
crates/hdl-graph-mcp/src/tools/: callees.rs  callers.rs  check.rs  def.rs  drivers.rs  explore.rs  export.rs  files.rs  hierarchy.rs  impact.rs  inst.rs  mod.rs  node_info.rs  search.rs  stats.rs  uvm.rs
crates/hdl-graph-parse/: Cargo.toml
crates/hdl-graph-parse/src/: lib.rs  scanner.rs
crates/hdl-graph-parse/src/extractor/: assertion.rs  class.rs  dpi.rs  generate.rs  incremental.rs  interface.rs  mod.rs  package.rs  uvm_config.rs  uvm_factory.rs  uvm_tlm.rs
crates/hdl-graph-parse/src/preprocessor/: mod.rs  pass1_standard.rs  pass2_scanner.rs  pass3_expander.rs  pass4_merger.rs  patterns.rs  sv_preprocessor.rs
crates/hdl-graph-query/: Cargo.toml
crates/hdl-graph-query/src/: json_export.rs  lib.rs  markdown_export.rs  scip.rs
crates/hdl-graph-storage/: Cargo.toml
crates/hdl-graph-storage/src/: lib.rs  memory.rs  persistent.rs
crates/hdl-graph-types/: Cargo.toml
crates/hdl-graph-web/: Cargo.toml
docs/: MIGRATION_PLAN.md  P0_ANALYSIS.md  P0_FIX_REPORT.md  P1_P2_P3_FIX_REPORT.md  PORTING.md  developer-guide.md  user-guide.md
scripts/: build-offline.sh  generate-offline-package.ps1  prepare-offline.ps1  prepare-rust-toolchain.ps1
tests/: Cargo.toml  fix-plan.md  hdl-graph.tests.md
tests/fixtures/edge_cases/: empty_module.v  ifdef_macros.sv  multi_file_other.sv  multi_file_top.sv  nested_generate.sv  nonblocking_tlm.sv
tests/fixtures/sv_advanced/: always_comb_ff_latch.sv  assertions.sv  dpi_bind.sv  generate_blocks.sv
tests/fixtures/sv_oop/: base_class.sv  derived_class.sv  interface_modport.sv  package_defs.sv
tests/fixtures/uvm_components/: my_agent.sv  my_driver.sv  my_env.sv  my_monitor.sv  my_scoreboard.sv  my_test.sv  my_transaction.sv  sequences.sv
tests/fixtures/uvm_macros/: macro_do.sv  macro_fields.sv  macro_info.sv  macro_utils.sv
tests/fixtures/verilog_basic/: adder.v  counter.v  params.v  top.v
tests/src/integration/: additional_edge_case_tests.rs  edge_case_tests.rs  export_tests.rs  external_project_tests.rs  incremental_tests.rs  mod.rs  query_tools_tests.rs  scanner_tests.rs  sv_advanced_tests.rs  sv_oop_tests.rs  uvm_extraction_tests.rs  uvm_macro_fixture_tests.rs  uvm_preprocessor_tests.rs  verilog_basic_tests.rs
tests/src/integration/common/: mod.rs
tools/: dump_tree.rs
vscode-extension/: .vscodeignore  language-configuration.json  package.json  tsconfig.json
vscode-extension/src/: binary_manager.ts  client.ts  config.ts  extension.ts  graph_panel.ts
(+8 files in other folders)
