[package]
name = "hdl-graph-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hdl-graph-core = { path = "../crates/hdl-graph-core" }
hdl-graph-grammar = { path = "../crates/hdl-graph-grammar" }
hdl-graph-parse = { path = "../crates/hdl-graph-parse" }
hdl-graph-storage = { path = "../crates/hdl-graph-storage" }
hdl-graph-query = { path = "../crates/hdl-graph-query" }
tree-sitter = "0.25"
tempfile = "3"
serde_json = "1"
