[package]
name = "hdl-graph-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP server for HDL Code Graph"

[dependencies]
hdl-graph-core = { path = "../hdl-graph-core" }
hdl-graph-storage = { path = "../hdl-graph-storage" }
hdl-graph-parse = { path = "../hdl-graph-parse" }
hdl-graph-query = { path = "../hdl-graph-query" }
rmcp = { path = "../../rmcp-sdk/crates/rmcp", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
walkdir = "2"
toml = "0.8"
regex = "1"

[lib]
name = "hdl_graph_mcp"
