[package]
name = "hdl-graph-query"
version = "0.2.0"
edition = "2021"
description = "Query engine and SCIP export"

[dependencies]
hdl-graph-core = { path = "../hdl-graph-core" }
hdl-graph-storage = { path = "../hdl-graph-storage" }
serde_json = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[lib]
name = "hdl_graph_query"
