[package]
name = "hdl-graph-storage"
version = "0.2.0"
edition = "2021"
description = "Graph storage layer for HDL Code Graph"

[dependencies]
hdl-graph-core = { path = "../hdl-graph-core" }
rocksdb = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lib]
name = "hdl_graph_storage"
